updated the nav-bar's styling issue on mobile devices

--- a/blogs/style/common_styles.css
+++ b/blogs/style/common_styles.css
@@ -27,7 +27,6 @@ body {
 }
 
 div {
-    /*zoom: 90%;*/
 	font-size: 16px;
 	font-weight: 400;
 	font-family: 'open_sansregular', 'Helvetica', sans-serif;
@@ -37,8 +36,10 @@ div {
 	margin-right: auto;
 }
 
-.small-frame {
-	zoom: 90%;
+@media(max-width: 1000px) {
+	div {
+		zoom: 90%;
+	}
 }
 
 img {
